--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react_crud_app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.1.0"
+  }
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
